[project]
name = "vflow-cli"
version = "0.1.1"
description = "The v-flow CLI and Claude skills bundle for automating media backup and processing workflows for videographers."
authors = [{ name = "Kaung", email = "kaungzinye@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer[all]",
    "pyyaml",
]

[project.scripts]
v-flow = "vflow.main:app"

[project.optional-dependencies]
test = [
    "pytest",
]
